<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_cover3"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        >

        <TextView
            android:text="@string/title_istilah"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:background="#ffbdb4b3"
            android:textSize="18dp"
            />

        <TextView
            android:id="@+id/txt_istilah_v_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dip"
            android:paddingTop="6dip"
            android:textColor="#ff000000"
            android:background="#fffffdf4"
            android:textSize="18dp" />

        <TextView
            android:text="@string/title_bahasa_indonesia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:background="#ffbdb4b3"
            android:textSize="18dp"
            />

        <TextView
            android:id="@+id/txt_penjelasan_bahasa_indonesia_v_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dip"
            android:paddingTop="6dip"
            android:textColor="#ff000000"
            android:background="#fffffdf4"
            android:textSize="18dp" />

        <TextView
            android:text="@string/title_bahasa_inggris"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:background="#ffbdb4b3"
            android:textStyle="italic"
            android:textSize="18dp"
            />

        <TextView
            android:id="@+id/txt_penjelasan_bahasa_inggris_v_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dip"
            android:paddingTop="6dip"
            android:textColor="#ff000000"
            android:background="#fffffdf4"
            android:textSize="18dp"
            android:textStyle="italic" />
    </LinearLayout>

</ScrollView>